--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap"
       rel="stylesheet"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>BURGERIAZ</title>
   </head>
   <body>
     <noscript>
